Fixed Board Size And Overflow Auto

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -287,14 +287,15 @@ html {
     top: 55px;
     margin: 0;
     padding: 0;
+    overflow: auto;
 }
 
 #board-child {
     cursor: crosshair;
     margin: 0;
     padding: 0;
-    /* height: 100%;
-    width: 100%; */
+    height: 5000px;
+    width: 5000px;
     background-color: rgb(245, 245, 220);
 }
 
